# paperwall

./: Cargo.toml  README.md
macos/src/: main.css
paperwall-macos/src/: main.rs
paperwall-windows/: README.md
paperwall-windows/src/: main.css  main.js
src/: main.css  main.html  main.js  main.rs
src/macos/: app.js  app.rs
src/windows/: app.js  app.rs  wallpaper.css  wallpaper.html
windows/: Cargo.toml
windows/src/: main.rs  wallpaper.html
