[package]
name = "paperwall"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = "0.35.3"
wry = "0.55.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGImage"] }
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_Graphics_Imaging",
	"Win32_Media_MediaFoundation",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_UI_WindowsAndMessaging"
] }
