[package]
name = "paperwall"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = "0.35.3"
wry = "0.55.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGImage"] }
objc2-foundation = "0.3.2"
